# catcheye-guard

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-compose.base.yml  docker-compose.dev.yml  entrypoint.sh  ros_settings.sh  update-env.sh  update_env.sh
.githooks/: commit-msg
cmake/: catcheye-guard-launcher.sh.in  install-runtime-closure.cmake.in
config/: camera_properties.json  pallet_roi_cam_default.json  roi_cam_default.json
docker/: Dockerfile  docker-compose.base.yml  docker-compose.dev.yml  entrypoint.sh  libcamera-aarch64.ini
docker/amd64/: Dockerfile  docker-compose.base.yml  docker-compose.dev.yml
docker/arm64/: Dockerfile  docker-compose.base.yml  docker-compose.dev.yml
docs/: API.md
experiments/: gst_cam_test.cpp  gst_yolo_onnx_test.cpp  gst_yolo_ort_test.cpp
experiments/gst_yolo_ncnn/: CMakeLists.txt  gst_yolo_ncnn_test.cpp
include/catcheye/core/: camera.hpp  frame_source.hpp  frame_streamer.hpp  pipeline.hpp
include/catcheye/guard/: detector.hpp
include/catcheye/guard/roi/: camera_roi_config.hpp  point.hpp  roi_evaluator.hpp  roi_geometry.hpp  roi_polygon.hpp  roi_repository.hpp  roi_validation.hpp
include/catcheye/hardware/: gpio_signal.hpp  gpio_signal_config.hpp
include/catcheye/types/: bounding_box.hpp  frame.hpp  pixel_format.hpp  timestamp.hpp
include/catcheye/utils/: logger.hpp  time_utils.hpp
models/: metadata.yaml  pallet_roi_cam_default.json  roi_cam_default.json
scripts/: catcheye-guard-hailo.service  cmake.sh  run-hailo.sh  run.sh  sync-compile-commands.sh  update-env.sh
scripts/MediaPipe/: check_install.py  headless_alert.py  install_media_pipe.sh  person_detect.py
src/: camera.cpp  detector.cpp  frame_source.cpp  frame_streamer.cpp  logger.cpp  main.cpp  pipeline.cpp
src/guard/: app.cpp  app.hpp  bounding_box.hpp  camera_properties.cpp  camera_properties.hpp  detection_postprocess.cpp  detection_postprocess.hpp  detector.cpp  detector.hpp  detector_factory.hpp  detector_interface.hpp  frame_streamer_sink.cpp  frame_streamer_sink.hpp  guard_app.cpp  guard_app.hpp  guard_processor.cpp  guard_processor.hpp  guard_processor_config.hpp  http_api_server.cpp  http_api_server.hpp  http_roi_server.cpp  http_roi_server.hpp  mediapipe_detector.cpp  mediapipe_detector.hpp  ncnn_detector.cpp  ncnn_detector.hpp  preview_renderer.cpp  preview_renderer.hpp  processor.cpp  processor.hpp  processor_config.hpp  recording_controller.cpp  recording_controller.hpp  roi_reload.cpp  roi_reload.hpp
src/guard/roi/: roi_evaluator.cpp  roi_geometry.cpp  roi_repository.cpp  roi_validation.cpp
src/hardware/: gpio_signal.cpp
templates/vision_app/: README.md  app.cpp.tpl  app.hpp.tpl  main.cpp.tpl  processor.cpp.tpl  processor.hpp.tpl  processor_config.hpp.tpl
tests/: detection_postprocess_tests.cpp  test_frame_source.cpp  test_guard_app.cpp  test_guard_processor.cpp  test_pipeline.cpp  test_roi_evaluator.cpp  test_roi_geometry.cpp  test_roi_repository.cpp  test_roi_validation.cpp
toolchains/: aarch64-linux-gnu.cmake
